# datasheep

./: .env  Cargo.toml
src/: main.rs  server.rs
src/common/: constants.rs
src/helpers/: errors.rs  jwt.rs  mod.rs
src/middleware/: jwt_validator.rs  mod.rs
src/models/: mod.rs  mongo_doc_model.rs  user.rs
src/requests/: auth.rs
src/requests/user/: login.rs  register.rs
