[package]
name = "syncify-rs"
version = "0.1.0"
authors = ["hu"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.1"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.1"
jsonwebtoken = "7"
reqwest = "0.9.22"
actix-rt = "1.0.0"
actix-web = "2.0.0"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
actix-web-httpauth = "0.4.1"
log = "0.4.0"
env_logger = "0.7.1"
tokio = { version = "0.2", features = ["full"] }
mongodb = "0.11.0"
rust-argon2 = "0.8"
